# luasdl-example

./: CMakeLists.txt  README.md
SDL2/: CMakeLists.txt
lua/: CMakeLists.txt
lua/src/: CMakeLists.txt
template/: CMakeLists.txt  README.txt  game.lua  main.c
