CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(template)

ADD_EXECUTABLE(template main.c)
TARGET_LINK_LIBRARIES(template SDL2-static SDL2main lua)
INCLUDE_DIRECTORIES(${SDL2_SOURCE_DIR}/include ${lua_SOURCE_DIR}/include)

CONFIGURE_FILE(player.bmp ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
CONFIGURE_FILE(game.lua ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
